# ai-product-radar

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/versions/: 202604220001_initial_schema.py  202604220002_empty_migration.py  202604230001_add_type_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  logging.py
apps/api/app/models/: __init__.py  tables.py
apps/api/app/routers/: companies.py  company_types.py  extractions.py  health.py  raw_articles.py  source_types.py  sources.py  stats.py
apps/api/app/services/: crawl_service.py  extraction_service.py
apps/api/app/worker/: celery_app.py  tasks.py
apps/web/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/companies/: page.tsx
apps/web/app/admin/company-types/: page.tsx
apps/web/app/admin/crawl-logs/: page.tsx
apps/web/src/components/: admin-layout.tsx  client-provider.tsx  companies-page-content.tsx  company-form.tsx  company-types-page-content.tsx  crawl-logs-page-content.tsx  header.tsx  home-content.tsx  language-switcher.tsx  raw-articles-page-content.tsx  source-form.tsx  source-types-page-content.tsx  sources-page-content.tsx  statistics-cards.tsx  status-pill.tsx  type-form.tsx
apps/web/src/i18n/: en.ts  index.tsx  zh.ts
apps/web/src/lib/: api.ts
docs/: development-tasks.md  schema.md
infra/docker/: nginx.conf
(+3 files in other folders)
