[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-product-radar-api"
version = "0.1.0"
description = "FastAPI backend for AI Product Radar"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13.3",
  "beautifulsoup4>=4.12.3",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "feedparser>=6.0.11",
  "httpx>=0.27.2",
  "playwright>=1.47.0",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "python-json-logger>=2.0.7",
  "redis>=5.1.1",
  "SQLAlchemy>=2.0.35",
  "trafilatura>=1.12.2",
  "uvicorn[standard]>=0.30.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
